--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     -->
     <link href="https://fonts.googleapis.com/css?family=Ibarra+Real+Nova|Playfair+Display&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <title>PriCov</title>
+    <title>Wesley Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
